--- a/assets/scss/_raditian.scss
+++ b/assets/scss/_raditian.scss
@@ -519,7 +519,7 @@ html body {
 .experience__company {
     font-size: 14px;
     font-weight: 700;
-    color: #AE1B13;
+    color: #450a29;
 }
 .clients {
     display: -webkit-box;
@@ -608,7 +608,7 @@ html body {
 .testimonial__author-info span {
     font-size: 14px;
     font-weight: 700;
-    color: #AE1B13;
+    color: #450a29;
 }
 html {
     height: 100%;
@@ -627,11 +627,11 @@ html body {
     font-weight: 400;
 }
 html body ::-moz-selection {
-    background-color: #AE1B13;
+    background-color: #450a29;
     color: #fff;
 }
 html body ::selection {
-    background-color: #AE1B13;
+    background-color: #450a29;
     color: #fff;
 }
 input[type="text"]:focus,
@@ -878,7 +878,7 @@ textarea:focus {
     font-size: 25px;
     font-weight: 900;
     letter-spacing: -1.17px;
-    color: #AE1B13;
+    color: #450a29;
 }
 @media (min-width: 768px) {
     .header .navbar-brand img {
