--- a/assets/scss/adritian.scss
+++ b/assets/scss/adritian.scss
@@ -312,7 +312,7 @@ footer_links .nav-item .nav-link::after {
         background-color: #2c061a !important;
     }
     .testimonial__author-info span{
-        color: #F18983 !important;
+        color: #a6a6a6 !important;
     }
     .section--contact .container{
         background-color: #2c061a !important;
